# leanctx

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: observability.md
docs/benchmarks/: agent-workload.md  selfllm-providers.md
docs/blog/: launch-posts.md  v0.3-launch.md
docs/plans/: draft-otel.md  plan-otel.md
leanctx/: __init__.py  _content.py  _gemini_adapter.py  classifier.py  client.py  middleware.py  router.py  stats.py  tokens.py
leanctx/bench/: __init__.py  cli.py  scenarios.py  schema.py  workloads.py
leanctx/bench/runners/: agent_structural.py  anthropic_e2e.py  lingua_local.py  selfllm_provider.py
leanctx/compressors/: __init__.py  base.py  lingua.py  selfllm.py  verbatim.py
leanctx/integrations/: __init__.py  langchain.py
leanctx/observability/: __init__.py  _depth.py  api.py  compressor_hooks.py  config.py  method_status.py  metrics.py  middleware_hooks.py  stream_owners.py
leanctx/strategies/: __init__.py  base.py  dedup.py  purge_errors.py
scripts/: integration_test_agent_workload.py  integration_test_e2e.py  integration_test_lingua.py  integration_test_selfllm.py
tests/: test_classifier.py  test_client.py  test_compressors.py  test_content.py  test_e2e_anthropic.py  test_gemini_adapter.py  test_langchain.py  test_lingua.py  test_middleware.py  test_router.py  test_selfllm.py  test_smoke.py  test_strategies.py  test_streaming.py  test_tokens.py
tests/bench/: test_cli.py  test_isolation.py
tests/observability/: conftest.py  test_api_only.py  test_cold_import.py  test_compressor_spans.py  test_metrics_e2e.py  test_middleware_spans.py  test_stream_lifetime.py  test_taxonomy_e2e.py  test_wrapper_spans.py
ts/: README.md  package.json  tsconfig.json
ts/src/: anthropic.ts  index.ts  middleware.ts  openai.ts  stats.ts  telemetry.ts
