[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leanctx"
version = "0.0.0"
description = "Drop-in prompt compression for production LLM applications. Cut Anthropic / OpenAI / Gemini bills by 40-60%."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "jia-gao", email = "94939653+jia-gao@users.noreply.github.com" },
]
keywords = [
    "llm",
    "prompt-compression",
    "anthropic",
    "openai",
    "gemini",
    "rag",
    "langchain",
    "langgraph",
    "llmlingua",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
gemini = ["google-genai>=0.3.0"]
lingua = ["llmlingua>=0.2.0"]
tokens = ["tiktoken>=0.7"]
# 'bench' is for users who want to run the integration_test_*.py
# benchmark scripts. respx mocks provider HTTP so no API key is needed.
bench = ["respx>=0.21.0"]
# 'otel' enables OpenTelemetry spans + metrics. leanctx is API-only:
# it never owns the SDK or exporter; the application is responsible for
# configuring TracerProvider / MeterProvider / exporters.
otel = [
    "opentelemetry-api>=1.30,<2.0",
    "opentelemetry-sdk>=1.30,<2.0",
]
all = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=0.3.0",
    "llmlingua>=0.2.0",
    "tiktoken>=0.7",
    "respx>=0.21.0",
    "opentelemetry-api>=1.30,<2.0",
    "opentelemetry-sdk>=1.30,<2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6.0",
    "mypy>=1.10",
    "build>=1.0",
    "twine>=5.0",
    "tiktoken>=0.7",
    "anthropic>=0.40.0",
    "respx>=0.21.0",
    "opentelemetry-api>=1.30,<2.0",
    "opentelemetry-sdk>=1.30,<2.0",
]

[project.scripts]
leanctx = "leanctx.bench.cli:main"

[project.urls]
Homepage = "https://github.com/jia-gao/leanctx"
Repository = "https://github.com/jia-gao/leanctx"
Issues = "https://github.com/jia-gao/leanctx/issues"

[tool.hatch.build.targets.wheel]
packages = ["leanctx"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Benchmark scripts contain string-literal fixtures (simulated grep output,
# log dumps) where realistic line widths matter for the test to mean
# anything. E501 (line-too-long) inside those fixtures is not a code-quality
# issue.
"scripts/integration_test_*.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "anthropic",
    "anthropic.*",
    "openai",
    "openai.*",
    "google",
    "google.*",
    "llmlingua",
    "llmlingua.*",
    "torch",
    "torch.*",
    "langchain_core",
    "langchain_core.*",
    "opentelemetry",
    "opentelemetry.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
